changed images format from png to webp

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         </div>
         <div class="technologies__my-picture mobile__hidden">
           <img
-            src="./public/img/1678213461791-modified.jpg"
+            src="./public/img/1678213461791-modified.webp"
             alt="my-picture"
             class="technologies__my-picture--img"
           />
