added labels for links

--- a/index.html
+++ b/index.html
@@ -85,18 +85,21 @@
               href="https://github.com/BartoszBuko"
               target="_blank"
               class="mobile__nav--social"
+              aria-label="Github"
               ><i class="fa-brands fa-github fa-2x"></i>
             </a>
             <a
               href="https://instagram.com/bartus_buko"
               class="mobile__nav--social"
               target="_blank"
+              aria-label="Instagram"
               ><i class="fa-brands fa-instagram fa-2x"></i
             ></a>
             <a
               href="https://www.facebook.com/bartosz.buko.73"
               class="mobile__nav--social"
               target="_blank"
+              aria-label="Facebook"
               ><i class="fa-brands fa-facebook fa-2x"></i
             ></a>
           </div>
@@ -162,12 +165,14 @@
                 href="https://github.com/BartoszBuko/OptiAmazer"
                 target="_blank"
                 class="projects__item--about__links__link"
+                aria-label="OptiAmazer - Github"
                 ><i class="fab fa-github fa-xl"></i
               ></a>
               <a
                 href="https://optiamazer.up.railway.app"
                 target="_blank"
                 class="projects__item--about__links__link"
+                aria-label="OptiAmazer - Link"
                 ><i class="fas fa-external-link-alt fa-xl"></i
               ></a>
             </div>
@@ -196,12 +201,14 @@
                 href="https://github.com/BartoszBuko/Nadmuchani"
                 target="_blank"
                 class="projects__item--about__links__link"
+                aria-label="Nadmuchani - Github"
                 ><i class="fab fa-github fa-xl"></i
               ></a>
               <a
                 href="https://nadmuchani.com.pl"
                 target="_blank"
                 class="projects__item--about__links__link"
+                aria-label="Nadmuchani - Link"
                 ><i class="fas fa-external-link-alt fa-xl"></i
               ></a>
             </div>
@@ -292,18 +299,21 @@
               href="https://github.com/BartoszBuko"
               target="_blank"
               class="mobile__nav--social"
+              aria-label="Github"
               ><i class="fa-brands fa-github fa-2x"></i>
             </a>
             <a
               href="https://instagram.com/bartus_buko"
               class="mobile__nav--social"
               target="_blank"
+              aria-label="Instagram"
               ><i class="fa-brands fa-instagram fa-2x"></i
             ></a>
             <a
               href="https://www.facebook.com/bartosz.buko.73"
               class="mobile__nav--social"
               target="_blank"
+              aria-label="Facebook"
               ><i class="fa-brands fa-facebook fa-2x"></i
             ></a>
           </div>
@@ -314,6 +324,7 @@
             <a
               href="mailto:bukobartosz@gmail.com"
               class="socials__item__link email"
+              aria-label="Email"
             >
               <i class="fa-solid fa-envelope fa-xl"></i>
               bukobartosz@gmail.com
