Updated project and text-content
Replaced OptiAmazer project in projects section to FuelCalc
Also updated text-content like age and some informations on the landing page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -23,7 +23,7 @@
   <body>
     <header class="header">
       <nav class="desktop__nav" data-desktop-nav>
-        <p class="hello__nav red-text hidden" data-hello>Hello.</p>
+        <p class="hello__nav red-text hidden" data-hello>Bartosz_Buko</p>
         <ul class="desktop__nav__list">
           <li class="desktop__nav__list__item">
             <p class="desktop__nav__list__item__link active" data-nav-link>
@@ -82,6 +82,13 @@
           </ul>
           <div class="mobile__nav__menu--socials">
             <a
+              href="https://www.linkedin.com/in/bartosz-buko/"
+              target="_blank"
+              class="mobile__nav--social"
+              aria-label="LinkedIn"
+              ><i class="fa-brands fa-linkedin fa-2x"></i>
+            </a>
+            <a
               href="https://github.com/BartoszBuko"
               target="_blank"
               class="mobile__nav--social"
@@ -109,15 +116,13 @@
     <section class="home__desc">
       <div class="hello__container">
         <div class="content">
-          <h2 class="hello red-text">Hello.</h2>
-          <h2 class="hello red-text">Hello.</h2>
+          <h2 class="hello red-text">Bartosz_Buko</h2>
+          <h2 class="hello red-text">Bartosz_Buko</h2>
         </div>
         <div class="other__info">
-          <p class="top__text name">I'm Bartosz Buko</p>
-          <p class="top__text specialization">Front-end Developer</p>
-          <p class="top__text description">
-            Teenage programmer with passion in IT and programming
-          </p>
+          <p class="top__text name">Passionate</p>
+          <p class="top__text specialization">Problem solving</p>
+          <p class="top__text description">Front-end developer</p>
         </div>
       </div>
       <div class="bottom__other">
@@ -143,36 +148,35 @@
       <div class="projects__container">
         <div class="projects__container__item from-right">
           <div
-            class="projects__container__item__img project__optiamazer from-right-img"
+            class="projects__container__item__img project__fuelCalcs from-right-img"
           ></div>
           <div class="projects__container__item__about from-right-about">
-            <p class="project__name">OptiAmazer</p>
+            <p class="project__name">Fuel Calc</p>
 
             <p class="projects__item--about__text">
-              You can upload any image you want and easily optimize it for your
-              website. Simply upload your image, download the optimized version,
-              and you're done!
+              You can easily calculate your car fuel consumption based on your
+              fuel tank size and kilometers driven, another function is trip
+              price calculator where you can effortlessly see how much you will
+              pay for the trip
             </p>
             <div
               class="projects__item--about__technologies from-right-technologies"
             >
-              <p class="item__technology">Node.js</p>
-              <p class="item__technology">Express</p>
-              <p class="item__technology">Cheetaho API</p>
+              <p class="item__technology">TypeScript</p>
             </div>
             <div class="projects__item--about__links from-right-links">
               <a
-                href="https://github.com/BartoszBuko/OptiAmazer"
+                href="https://github.com/BartoszBuko/FuelCalc"
                 target="_blank"
                 class="projects__item--about__links__link"
-                aria-label="OptiAmazer - Github"
+                aria-label="FuelCalc - Github"
                 ><i class="fab fa-github fa-xl"></i
               ></a>
               <a
-                href="https://optiamazer.up.railway.app"
+                href="https://fuelcalcs.netlify.app/"
                 target="_blank"
                 class="projects__item--about__links__link"
-                aria-label="OptiAmazer - Link"
+                aria-label="FuelCalc - Link"
                 ><i class="fas fa-external-link-alt fa-xl"></i
               ></a>
             </div>
@@ -186,9 +190,9 @@
             <p class="project__name">Nadmuchani</p>
 
             <p class="projects__item--about__text">
-              Nadmuchani is a simple website to promote bouncy castles rentals.
-              It was created for a client who wanted to have a website to
-              promote his business.
+              IMPORTANT!: Website had emigrated to wordpress! Nadmuchani is a
+              simple website to promote bouncy castles rentals. It was created
+              for a client who wanted to have a website to promote his business.
             </p>
             <div class="projects__item--about__technologies">
               <p class="item__technology">HTML</p>
@@ -225,7 +229,7 @@
       <div class="top__container">
         <div class="about__item">
           <p class="about__p">
-            My name is Bartosz Buko and I'm a 17-year-old aspiring front-end
+            My name is Bartosz Buko and I'm a 20-year-old aspiring front-end
             developer based in Poland. From a young age, I've been fascinated by
             the power of technology to shape our world and solve complex
             problems. That's why I decided to pursue a career in web
@@ -237,10 +241,10 @@
           <p class="about__p tar">
             Over the past few years, I've been learning everything I can about
             HTML, CSS, and JavaScript, as well as related tools and frameworks
-            like Bootstrap and React. I'm passionate about staying up-to-date
-            with the latest trends and best practices in front-end development,
-            and I'm always looking for new challenges and opportunities to
-            expand my skills.
+            like TailWindCSS, TypeScript,React and NextJS. I'm passionate about
+            staying up-to-date with the latest trends and best practices in
+            front-end development, and I'm always looking for new challenges and
+            opportunities to expand my skills.
           </p>
         </div>
       </div>
@@ -252,8 +256,10 @@
               <li>HTML</li>
               <li>CSS</li>
               <li>JavaScript (ES6+)</li>
+              <li>TypeScript</li>
               <li>React</li>
-              <li>Bootstrap</li>
+              <li>Next.js</li>
+              <li>TailWindCSS</li>
               <li>Node.js</li>
               <li>Express</li>
               <li>MongoDB</li>
@@ -271,8 +277,8 @@
           <div class="technologies__item">
             <h3 class="technologies__item__title">Languages</h3>
             <ul class="technologies__item__p">
-              <li>Polish</li>
-              <li>English</li>
+              <li>Polish - native</li>
+              <li>English - B2</li>
             </ul>
           </div>
         </div>
@@ -295,6 +301,13 @@
         <div class="socials__item">
           <div class="socials__desc">Socials</div>
           <div class="socials__links">
+            <a
+              href="https://www.linkedin.com/in/bartosz-buko/"
+              target="_blank"
+              class="mobile__nav--social"
+              aria-label="LinkedIn"
+              ><i class="fa-brands fa-linkedin fa-2x"></i>
+            </a>
             <a
               href="https://github.com/BartoszBuko"
               target="_blank"
@@ -344,7 +357,7 @@
       particlesJS.load(
         "particles-js",
         "public/js/particlesjs-config.json",
-        function () {}
+        function () {},
       );
     </script>
     <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
